react-app/src/components/Product/Product.css
#product-page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
  height: fit-content;
}

#everything-else {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 1450px;
  padding: 0 25px;
  margin: 0 auto;
  height: fit-content;
}

#name-desc-logo {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-wrap: nowrap;
  margin-top: 10px;
  padding-bottom: 24px;
  border-bottom: 1px solid #d1cfce;
  margin-bottom: 8px;
}

#name-desc {
  display: flex;
  flex-direction: column;
}

#vendor-logo {
  width: 140px;
}

#product-name {
  font-size: 30px;
  font-weight: bold;
}

#product-description {
  font-size: 13px;
}

#main-event {
  display: flex;
  border-bottom: 1px solid #d1cfce;
  margin-bottom: 48px;
}

#product-pics {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: fit-content;
  height: fit-content;
}

#sidebar-right {
  width: 560px;
  height: fit-content;
  margin: 0px 0px 40px;
}

#thumbs-div {
  display: flex;
  justify-content: center;
  width: 840px;
  height: 68px;
}

#main-img-div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  min-height: 400px;
  margin: 0px 40px 20px;
}

#main-price {
  color: #d71920;
  font-weight: bold;
  font-size: 40px;
  margin-top: 0px;
  border-bottom: 1px solid #d1cfce;
  padding-bottom: 16px;
}

#bitchin-warranty {
  display: flex;
  border-bottom: 1px solid #d1cfce;
  padding-bottom: 48px;
  margin-bottom: 24px;
}

#warranty-details {
  width: 616px;
  margin-right: 24px;
}

#warranty-logo {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 808px;
  position: relative;
}

#total {
  background-color: transparent;
  width: 120px;
  height: 68px;
}

#place-total {
  width: 184px;
  height: 100px;
  padding: 16px;
  padding-left: 48px;
  display: flex;
  justify-content: center;
  background-color: black;
}

#badge {
  width: 100px;
  height: 125px;
  position: absolute;
  left: 230px;
  top: 64px;
}

#price-wrap {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #f2f1f0;
  padding: 16px 32px;
  position: absolute;
  left: 472px;
  height: 100px;
}

#strike {
  text-decoration: line-through;
}

#free {
  color: #618d25;
}

.warranty-li {
  list-style-type: none;
  width: 620px;
}

.warranty-li::before {
  display: inline-block;
  width: 16px;
  height: 16px;
  margin-right: 8px;
  content: '';
  background: url('https://media.sweetwater.com/about/guitars/check-circle-stroke.svg') no-repeat 0 0;
  background-size: 16px;
  vertical-align: -10%;
  color: #3b7d1a;
}

#warranty-ul {
  margin-left: -40px;
}

#warranty-info {
  font-size: 30px;
  font-weight: bold;
  margin-bottom: 24px;
}

#two-free {
  font-size: 18px;
  font-weight: bold;
  margin-bottom: 24px;
}

#link-learn-more {
  color: #0072ba;
  text-decoration: underline;
}

#link-learn-more:hover {
  cursor: pointer;
  color: #59a2cf;
}

.product-tiny-thumbs {
  width: 64px;
  height: 64px;
  margin: 0px 8px 8px 0px;
  background-size: 60px;
  background-repeat: no-repeat;
  background-position: center;
  padding: 2px;
}

.product-tiny-thumbs:hover {
  cursor: pointer;
  border: 1px solid black;
}

.selected-thumb {
  border: 2px solid black;
}

#tech-specs-div {
  display: flex;
  flex-direction: column;
  width: 100%;
}

#specs {
  width: 1400px;
  height: fit-content;
  margin-bottom: 48px;
}

#specs-title {
  font-size: 32px;
  font-weight: bold;
  margin-bottom: 20px;
}

#spanning-tree {
  width: 100%;
  height: fit-content;
  display: flex;
  flex-direction: column;
}

.span-div {
  display: flex;
}

.spec-cat-dark {
  display: inline-block;
  background-color: #f2f1f0;
  height: 38px;
  width: 220px;
  padding-top: 6px;
  padding-left: 8px;
  padding-right: 8px;
}

.spec-cat-light {
  display: inline-block;
  background-color: #fafaf9;
  height: 38px;
  width: 220px;
  padding-top: 6px;
  padding-left: 8px;
  padding-right: 8px;
}

.spec-val-dark {
  display: inline-block;
  background-color: #f2f1f0;
  height: 38px;
  padding-top: 6px;
  flex-grow: 1;
}

.spec-val-light {
  display: inline-block;
  background-color: #fafaf9;
  height: 38px;
  flex-grow: 1;
  padding-top: 6px;
}

.obj-cat-name {
  width: 100%;
  border-bottom: 1px solid #d1cfce;
  font-weight: bold;
  font-size: 20px;
  padding-bottom: 8px;
  margin-top: 16px;
}

#add-to-cart {
  width: 300px;
  height: 52px;
  background-color: #3B7D1A;
  border: none;
  border-radius: 2px;
  color: white;
  margin-top: 16px;
  font-size: 18px;
}

#add-to-cart:hover {
  cursor: pointer;
  background-color: #2c660f;
}

#not-logged {
  width: 300px;
  height: 52px;
  background-color: #3B7D1A;
  border: none;
  border-radius: 2px;
  color: white;
  margin-top: 16px;
  font-size: 18px;
}

/*

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

*/

